--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -52,8 +52,66 @@
     padding: 8px 12px 8px 12px;
 }
 
+.sign_in_button:hover{
+    box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.50); ;
+}
+
+.sign_in_button:focus{
+    outline: none;
+}
+
+/* Microphone icon is the microphone logo */
+.microphone_icon{
+    width: 14px;
+    height: auto;
+}
+
+/* Magnifying glass icon is the magnifying glass logo */
+.magnifying_glass_icon{
+    width: 18px;
+    height: auto;
+}
+
+/* search_bar_container is the container for the whole search bar */
+.search_bar_container{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 10px;
+    padding-right: 20px;
+    width: 500px;  
+    height: 44px;  
+    border-color: hsl(0, 0%, 90%);
+    border-width: 1px;
+    border-style: solid;
+    margin-top: 25px;
+    margin-bottom: 35px;
+    border-radius: 24px;
+}
+
+.search_bar_container:hover{    
+    box-shadow: 1px 1px 5px 3px rgba(68, 50, 50, 0.075);
+}
+
 /* Reminder : a is an hyperlink tag */
 a{
     text-decoration: none;
     color: inherit;
 }
+
+a:hover{
+    text-decoration: underline;
+}
+
+/* This is the search bar input */
+input[type="text"]{
+    border-style: none;
+    height: inherit;
+    height: 34px;
+    width: 500px;
+    font-size: 16px;
+    font-family: arial,sans-serif;
+    margin-left: 5px;
+    margin-right: 5px;
+    outline: none;
+   }
